# STM32-Flight-Computer

./: .gitignore  Cargo.toml  LICENSE  NUCLEO_SETUP.md  PIN_MAP.txt  README.md  STARTUP_CHECKLIST.md  build.rs  flash.sh  memory.x  openocd.cfg
.cargo/: config.toml
.claude/: settings.local.json
ground/: .env.example  inference.py  requirements.txt  weed_map.py
ground/Ground Station.app/Contents/: Info.plist
ground/Ground Station.app/Contents/MacOS/: Ground Station
ground/assets/: drone_icon.icns
ground/gcs/: _yolo_worker.py  config.py  dashboard.py  exg.py  follow.py  gfx.py  mavlink.py  overlay.py  renderer.py  station.py  tracker.py  weed_map.py
pi/: .env.example  README.md  camera.service  camera_stream.py  demo_cam.py  mavlink.service  mavlink_bridge.py  motor_test.py  requirements.txt  weed_pilot.py
src/: ahrs.rs  baro.rs  battery.rs  estimator.rs  gps.rs  health.rs  imu.rs  led.rs  mag.rs  main.rs  mavlink.rs  motor.rs  motors.rs  navigation.rs  pid.rs  rc.rs  state.rs  telemetry.rs  types.rs
src/actuators/: mod.rs  motor.rs
src/actuators/payloads/: servo.rs
src/sensors/: baro.rs  battery.rs  flow.rs  gps.rs  imu.rs  mag.rs  mod.rs  rc.rs
src/status/: led.rs
