[package]
name = "flight-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["stm32h723zg", "rt", "exti", "defmt", "time-driver-any", "unstable-pac"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

libm = "0.2"

critical-section = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = true
lto = true
opt-level = 's'

[features]
default = []
simulation = []
# Bench bring-up on the NUCLEO-H723ZG with no Pi attached: route the MAVLink
# USART3 onto the ST-Link Virtual COM Port pins (PD8/PD9) instead of the Pi
# header pins (PB10/PB11), so a GCS can send DO_MOTOR_TEST etc. over the same
# USB cable used to flash. Leave OFF for the deployed Pi wiring.
nucleo-vcp = []
# ⚠ BENCH ONLY (PROPS OFF): hold one motor (BENCH_FORCE_MOTOR in motor.rs) at a fixed
# throttle continuously — a constant DSHOT stream for scope/logic-analyzer probing, no
# command/arming/watchdog needed. NEVER flash for flight.
bench-force = []
# BENCH DIAGNOSTIC (`--features pin-test`): replace motor_task with a GPIO sweep that
# drives PB4/PB5/PB0/PB1 HIGH one at a time, so a multimeter (DC volts) can verify each
# STM pin reaches its ESC signal pad. No DShot, no TIM3 — nothing spins. Bench only.
pin-test = []
# ⚠ BENCH ONLY (PROPS OFF): `--features spin-all` arms the ESCs (continuous zeros) then
# holds ALL FOUR motors at a low fixed throttle automatically — watch every motor spin
# without the GCS script. NEVER flash for flight.
spin-all = []
# PID-tuning "blackbox": stream ~50 Hz setpoint/measured/gyro/output over RTT defmt for
# capture + plotting during tuning (`cargo run --features tune-log`). Off by default.
tune-log = []
# BENCH DIAGNOSTIC (`--features dshot-debug`): instrument the DSHOT TX path — a one-shot
# readback of the GPIO alternate-function / TIM3 / DMAMUX config at init, plus a 1 Hz
# DMA-health log (frames sent/skipped, transfer-complete + error flags, last NDTR). Pure
# observability, no behaviour change. Combine with spin-all to watch the signal path
# while the motors are commanded — tells you if the chip is clocking a clean frame out.
dshot-debug = []
# ⚠ BENCH ONLY, PROTOCOL-CHANGING (`--features dshot-bidir`): switch the DSHOT encoding to
# BIDIRECTIONAL (inverted CRC) so the ESC replies with eRPM telemetry. The encode + GCR
# decode are implemented; the on-wire edge CAPTURE is a documented, NOT-yet-bench-validated
# scaffold. Mutually exclusive with plain DSHOT — an ESC on standard firmware won't decode
# it. Implies dshot-debug for the readout. NEVER flash for flight.
dshot-bidir = ["dshot-debug"]