[package]
name = "flight-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
# time-driver-tim5: pin the embassy time driver to the free 32-bit TIM5 (app uses TIM3/TIM4).
# NOTE: this was tried as a fix for the ~40 Hz executor wake-up clumping and proved NEUTRAL —
# the clumping persisted until sensor/UART tasks were bisected out, so its cause lives in that
# task group (leading suspects: defmt-RTT blocking mode under probe, or a UART error-IRQ storm)
# and is STILL UNRESOLVED. Keeping tim5 anyway: an explicit 32-bit timer is strictly safer than
# letting time-driver-any pick. Do not treat this feature as the cadence fix.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["stm32h723zg", "rt", "exti", "defmt", "time-driver-tim5", "unstable-pac"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

libm = "0.2"

critical-section = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = true
lto = true
opt-level = 's'

[features]
default = []
simulation = []
# Target the NUCLEO-H723ZG dev board (vs the custom flight computer):
#  • SPI1 MOSI moves PA7 → PD7 — on the Nucleo, PA7 is RMII_CRS_DV, hard-wired to
#    the on-board Ethernet PHY, which loads the line and kills the IMU/baro bus.
#  • Status LED moves PG7 → PE1 (LD2, active-HIGH; PG7 is active-low on the FC).
# Flying the Nucleo with the Pi attached = `--features nucleo` alone.
nucleo = []
# Nucleo bench bring-up with no Pi attached: `nucleo` plus MAVLink USART3 routed
# onto the ST-Link Virtual COM Port pins (PD8/PD9) instead of the Pi header pins
# (PB10/PB11), so a GCS can send DO_MOTOR_TEST etc. over the flashing USB cable.
nucleo-vcp = ["nucleo"]
# ⚠ BENCH ONLY (PROPS OFF): hold one motor (BENCH_FORCE_MOTOR in motor.rs) at a fixed
# throttle continuously — a constant DSHOT stream for scope/logic-analyzer probing, no
# command/arming/watchdog needed. NEVER flash for flight.
bench-force = []
# BENCH DIAGNOSTIC (`--features pin-test`): replace motor_task with a GPIO sweep that
# drives PB4/PB5/PB0/PB1 HIGH one at a time, so a multimeter (DC volts) can verify each
# STM pin reaches its ESC signal pad. No DShot, no TIM3 — nothing spins. Bench only.
pin-test = []
# ⚠ BENCH ONLY (PROPS OFF): `--features spin-all` cycles all four motors between a
# zero-throttle arming window and a low fixed throttle burst, forever — so the ESC
# catches a zero window to arm regardless of power-up timing. NEVER flash for flight.
spin-all = []
# Default motor protocol is DShot300 (TIM3 PSC=1) — the fitted HGLRC 60A V2 4-in-1
# BLHeli_S ESC's target MCU cannot parse DShot600 despite the box listing "DShot600/300"
# support, confirmed by bench test 2026-07-02. `--features dshot600` raises the bit rate
# back to 600 kbit/s (TIM3 PSC=0) for a different/upgraded ESC — nothing else in the TX
# path changes, DShot duty ratios are speed-independent.
dshot600 = []
# Gripper-jaw feedback: require the PC2 microswitch (closed→GND = weed held) to
# confirm each grab; failed grabs retry up to MAX_GRIP_ATTEMPTS then abort to
# mission. OFF = legacy open-loop timer behaviour (no switch fitted).
grip-sense = []
# PID-tuning "blackbox": stream ~50 Hz setpoint/measured/gyro/output over RTT defmt for
# capture + plotting during tuning (`cargo run --features tune-log`). Off by default.
tune-log = []
# BENCH DIAGNOSTIC (`--features dshot-debug`): instrument the DSHOT TX path — a one-shot
# readback of the GPIO alternate-function / TIM3 / DMAMUX config at init, plus a 1 Hz
# DMA-health log (frames sent/skipped, transfer-complete + error flags, last NDTR). Pure
# observability, no behaviour change. Combine with spin-all to watch the signal path
# while the motors are commanded — tells you if the chip is clocking a clean frame out.
dshot-debug = []
# ⚠ BENCH ONLY, PROTOCOL-CHANGING (`--features dshot-bidir`): switch the DSHOT encoding to
# BIDIRECTIONAL (inverted CRC) so the ESC replies with eRPM telemetry. The encode + GCR
# decode are implemented; the on-wire edge CAPTURE is a documented, NOT-yet-bench-validated
# scaffold. Mutually exclusive with plain DSHOT — an ESC on standard firmware won't decode
# it. Implies dshot-debug for the readout. NEVER flash for flight.
dshot-bidir = ["dshot-debug"]